--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -1,7 +1,7 @@
 header.mt-6
   h1 Debts 
 
-main.wide.no-bd.flex.justify-between.flex-col.gap
+.section-border-base.section-wide.no-bd.flex.justify-between.flex-col.gap
   .table-card
     .search-navigation
       = render partial: "_shared/search-form", locals: {path: debts_path}
