--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -19,7 +19,7 @@ header.mt-6
           i.icn ⚡️
           | Get missing sales from Woo
 
-main.wide.no-bd.flex.justify-between.flex-col.gap
+.section-border-base.section-wide.no-bd.flex.justify-between.flex-col.gap
   .table-card
     h3.flex.justify-between
       span Sales Debt
