--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -56,7 +56,7 @@ html
                 - if current_user.admin?
                   li = link_to "Users", users_path, type: "button"
                 li = link_to "Log Out", log_out_path, method: :post, data: { confirm: "Are you sure you want to log out?", turbo_method: :post }, type: "button"
-    main.container.mx-auto.mt-8
+    main.container.mx-auto.mt-8.mb-60
       = yield
     footer.container.mx-auto.text-center.mb-8
       a.hover:bg-transparent href="" onclick="window.scrollTo({top: 0}); return false;" class="link"
