--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -22,7 +22,7 @@ nav
         | Purchase
 
 
-main.wide.flex.flex-col.gap.w-pd
+.section-border-base.section-wide.flex.flex-col.gap.w-pd
   = render "product_attributes", product: @product
   = render "product_editions", product: @product
   = render "product_active_sales", product: @product,\
