--- a/app/views/purchase_items/show.html.slim
+++ b/app/views/purchase_items/show.html.slim
@@ -18,7 +18,7 @@ nav
     li
       = render "_shared/action-edit", route: edit_purchase_item_path(@purchase_item), btn: true
 
-main.wide.w-pd.flex.flex-col.gap
+.section-border-base.section-wide.w-pd.flex.flex-col.gap
   .cards.items-center
     = render "_shared/gallery", images: @purchase_item.images
 
