--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -28,7 +28,7 @@ nav
           | Move all
 
 
-main.wide.flex.flex-col.gap.no-bd
+.section-border-base.section-wide.flex.flex-col.gap.no-bd
 
   - if @purchase_items.any?
       .table-cards-group data-controller="move-items"
