--- a/app/views/versions/index.html.slim
+++ b/app/views/versions/index.html.slim
@@ -1,8 +1,7 @@
 = render "_shared/notice"
-
 = render "_shared/nav-index", model: @versions
 
-main.wide
+.section-border-base.section-wide
   table(role="grid")
     thead
       tr
