--- a/app/views/warehouses/show.html.slim
+++ b/app/views/warehouses/show.html.slim
@@ -6,7 +6,7 @@
       i.icn 📦
       | Add product
 
-main.wide.no-bd.flex.flex-col.gap
+.section-border-base.section-wide.no-bd.flex.flex-col.gap
   - if @warehouse.purchase_items.present?
     = render "purchase_items"
 
