--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -4,13 +4,12 @@
 = render "_shared/notice"
 = render "_shared/nav-index", model: @products, show_modal: true
 
-section.base-section-border.mt-4.-mx-8.mb-60.pb-8
+section.section-border-base.section-wide
   .search
     = render partial: "_shared/search-form", locals: {path: products_path}
-    .pagination-top
-      = paginate @products
+    .pagination-top = paginate @products
   - if @products.present? 
-    table role="grid" data-controller="table"
+    table data-controller="table"
       thead
         tr
           th.text-center Image
@@ -21,7 +20,6 @@ section.base-section-border.mt-4.-mx-8.mb-60.pb-8
           th.text-center Actions
       tbody
         = render @products
-    .pagination-bottom
-      = paginate @products
+    .pagination-bottom = paginate @products
   - else 
     = render "_shared/search-results-empty"
