--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -4,7 +4,7 @@
 = render "_shared/modal-container", heading: "Sales Synchronization", subheading:, content_partial: "modal_sync_menu"
 = render "_shared/nav-index", model: @sales, show_modal: true
 
-main.wide
+.section-border-base.section-wide
   .search-navigation
     = render partial: "_shared/search-form", locals: {path: sales_path}
     = paginate @sales
