--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,7 +2,7 @@
 
 = render "_shared/nav-index", model: @users
 
-main.wide
+.section-border-base.section-wide
   table(role="grid")
     thead
       tr
