--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,9 +1,8 @@
 = render "_shared/notice"
-
 = render "_shared/nav-index", model: @users
 
 .section-border-base.section-wide
-  table(role="grid")
+  table
     thead
       tr
         th ID
