--- a/app/views/versions/index.html.slim
+++ b/app/views/versions/index.html.slim
@@ -2,18 +2,13 @@
 = render "_shared/nav-index", model: @versions
 
 .section-border-base.section-wide
-  table(role="grid")
+  table
     thead
       tr
-        th
-          | ID
-        th
-          | Value
-        th
-          | Created
-        th
-          | Updated
-        th
-          | Actions
+        th ID
+        th Value
+        th Created
+        th Updated
+        th Actions
     tbody
       = render @versions
