--- a/app/views/shapes/index.html.slim
+++ b/app/views/shapes/index.html.slim
@@ -1,20 +1,14 @@
 = render "_shared/notice"
-
 = render "_shared/nav-index", model: @shapes
 
 .section-border-base.section-wide
-  table(role="grid")
+  table
     thead
       tr
-        th
-          | ID
-        th
-          | Title
-        th
-          | Created
-        th
-          | Updated
-        th
-          | Actions
+        th ID
+        th Title
+        th Created
+        th Updated
+        th Actions
     tbody
       = render @shapes
