--- a/app/views/sizes/_size.html.slim
+++ b/app/views/sizes/_size.html.slim
@@ -1,12 +1,8 @@
 tr id="#{dom_id size}"
-  td
-    = size.id
-  td
-    = size.value
-  td
-    = size.created_at
-  td
-    = size.updated_at
+  td = size.id
+  td = size.value
+  td = size.created_at
+  td = size.updated_at
   - if action_name != "show" 
     td.actions
       = link_to size
