--- a/app/views/sizes/index.html.slim
+++ b/app/views/sizes/index.html.slim
@@ -6,15 +6,10 @@
   table(role="grid")
     thead
       tr
-        th
-          | ID
-        th
-          | Value
-        th
-          | Created
-        th
-          | Updated
-        th
-          | Actions
+        th ID
+        th Value
+        th Created
+        th Updated
+        th Actions
     tbody
       = render @sizes
