--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -4,9 +4,9 @@
       h3 Items
       h3 = @total_purchase_items
 
-    .search-navigation.spacing-m
+    .search.spacing-m
       = render partial: "_shared/search-form", locals: {path: warehouse_path}
-      = paginate @purchase_items
+      .pagination-top = paginate @purchase_items
 
     - if @purchase_items.present?
       = render "_shared/move_to_warehouse/form", form_url: move_purchase_items_path(warehouse_id: @warehouse.id)
@@ -25,6 +25,6 @@
         tbody
           - @purchase_items.each do |item|
             = render "purchase_item", item:
-      = paginate @purchase_items
+    .pagination-bottom = paginate @purchase_items
     - else
       = render "_shared/search-results-empty"
