--- a/app/views/warehouses/index.html.slim
+++ b/app/views/warehouses/index.html.slim
@@ -6,13 +6,10 @@ section.section-border-base.section-wide
     thead
       tr
         th Position
-        th
-          | Name
-          br
-          <span class="fw-400">External Name for Clients</span>
+        th Name <span class="font-normal text-sm pl-4">+ External Name for Clients</span>
         th CBM
-        th Container Tracking Number
-        th Courier Tracking URL
+        th Container Tracking
+        th Courier Tracking
         th Products
         th.right Actions
     tbody
