--- a/app/assets/tailwind/tables.css
+++ b/app/assets/tailwind/tables.css
@@ -1,6 +1,6 @@
 @layer base {
   table {
-    @apply w-full border-collapse table-auto text-left border-b-1;
+    @apply w-full border-collapse table-auto text-left border-b-1 mt-3;
   }
 
   thead {
@@ -8,7 +8,7 @@
   }
 
   th {
-    @apply text-gray-800 align-bottom;
+    @apply text-gray-600 align-bottom font-semibold;
   }
 
   th,
@@ -17,20 +17,6 @@
   }
 
   tbody tr {
-    @apply hover:bg-gray-50 transition-colors duration-100 cursor-pointer;
-  }
-}
-
-@layer components {
-  .actions {
-    @apply text-center;
-  }
-
-  .actions a:not(:first-child) {
-    @apply ml-2;
-  }
-
-  .search {
-    @apply px-10 py-8 flex justify-between;
+    @apply border-b-2 border-b-gray-50 hover:bg-gray-50 transition-colors duration-100 cursor-pointer;
   }
 }
