--- a/app/views/_shared/_nav-index.html.slim
+++ b/app/views/_shared/_nav-index.html.slim
@@ -7,7 +7,7 @@ header.flex.justify-between.items-center
       - if show_modal
         li data-controller="modal-trigger"
           = link_to "#sync",
-            data: { action: "click->modal-trigger#open" }, class: "btn-action"
+            data: { action: "click->modal-trigger#open" }, class: "btn-rounded"
             i.icn 📥
             | Show Synchronization Menu
       li.ml-3
