--- a/app/views/_shared/_search-form.html.slim
+++ b/app/views/_shared/_search-form.html.slim
@@ -1,9 +1,9 @@
 = form_with(url: path, method: :get, class: "flex items-center w-full") do |form|
   = form.text_field :q, type: :search, placeholder: "Search...", value: params[:q], class: "w-full rounded-full px-4 py-2 border-gray-300 #{params[:q].present? ? "border-2 bg-gray-100" : "border"}"
-  = button_tag type: :submit, class: "ml-2 btn-action"
+  = button_tag type: :submit, class: "ml-2 btn-rounded"
     i.icn 🔎
     | Search
   - if params[:q]
-    = link_to path, class: "ml-2 btn-action"
+    = link_to path, class: "ml-2 btn-rounded"
       i.icn 🧹
       | Clear
