--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
     header.container.mx-auto.pt-2
       nav role="navigation-main"
         ul role="navigation-logo"
-         li.text-gray-600
+         li.text-gray-500
           i.icn.text-2xl.mr-2 😸
           strong.align-text-bottom StoreMate
         ul.text-sm
@@ -38,8 +38,8 @@ html
           - unless current_user.guest?
             nav.ml-6 role="navigation-dropdown" 
               button
-                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h14"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5" />
                 </svg>
               ul
                 li = link_to "Customers", customers_path, type: "button"
