Update header layout and basic UI styles

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,11 +15,11 @@ html
     = javascript_importmap_tags
     = turbo_refresh_method_tag :morph
     = turbo_refresh_scroll_tag :preserve
-  body
+  body.flex.flex-col.min-h-screen
     header.container.mx-auto.pt-2
       nav role="navigation-main"
         ul role="navigation-logo"
-         li.text-gray-500
+         li.text-gray-600
           i.icn.text-2xl.mr-2 😸
           strong.align-text-bottom StoreMate
         ul.text-sm
