--- a/app/views/versions/show.html.slim
+++ b/app/views/versions/show.html.slim
@@ -19,7 +19,7 @@ main
     h3 Products
     table role="grid" data-controller="table"
         thead
-          th.mute ID
+          th.text-gray-500 ID
           th Full Title
         tbody
           - @version.products.each do |product|
@@ -27,7 +27,7 @@ main
               data-action="click->table#goTo"
               data-table-url-param=product_path(product)
             )
-              td.mute = product.id
+              td.text-gray-500 = product.id
               td = product.full_title 
 
 = button_to "Destroy this version", version_path(@version), method: :delete, class: "btn-danger"
