--- a/app/views/products/_product_editions.html.slim
+++ b/app/views/products/_product_editions.html.slim
@@ -6,7 +6,7 @@
         th ID
         th Name
         th Type
-        th.right Active Sales
+        th.text-right Active Sales
         th Purchases
         th Shop ID
       tbody
@@ -15,7 +15,7 @@
             td = edition.id
             td = edition.title
             td = edition.types_name
-            td.right = format_zero_values @editions_sales_sums[edition.id]
+            td.text-right = format_zero_values @editions_sales_sums[edition.id]
             td = format_zero_values @editions_purchases_sums[edition.id]
             - if edition.store_link.present?
               td = link_to edition.shop_id, edition.store_link, :target => "_blank", "rel" => "noopener noreferrer"
