--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -14,9 +14,9 @@ section.section-border-base.section-wide data-controller="table move-items"
           th Image
           th Product
           th Supplier
-          th.right Price, $
-          th.right Total, $
-          th.right Debt, $
+          th.text-right Price, $
+          th.text-right Total, $
+          th.text-right Debt, $
           th Actions
       tbody
         = render @purchases, cache: true
