--- a/app/views/sale_items/show.html.slim
+++ b/app/views/sale_items/show.html.slim
@@ -13,7 +13,7 @@ nav
           | Amount: #{@sale_item.qty}
           - if @sale_item.price
             | , price: 
-            .mono.inline $#{format_money @sale_item.price}
+            .font-mono.inline $#{format_money @sale_item.price}
 
 .section-border-base.section-wide.flex.flex-col.gap.no-bd
   - if @sale_item.purchase_items.present?
@@ -31,10 +31,10 @@ nav
             = render "_shared/move_to_warehouse/th"
             th Warehouse
             th Length × Width × Height, cm
-            th.right Kg
-            th.right Expenses
-            th.right Shipping
-            th.right Actions
+            th.text-right Kg
+            th.text-right Expenses
+            th.text-right Shipping
+            th.text-right Actions
           tbody
             - @sale_item.purchase_items.each do |pp|
               tr(
@@ -44,10 +44,10 @@ nav
               )
                 = render "_shared/move_to_warehouse/td", id: pp.id
                 td = pp.warehouse.name
-                td.mono = format_item_size(pp)
-                td.mono.right = pp.weight
-                td.mono.right = format_money pp.expenses
-                td.mono.right = format_money pp.shipping_price
+                td.font-mono = format_item_size(pp)
+                td.font-mono.text-right = pp.weight
+                td.font-mono.text-right = format_money pp.expenses
+                td.font-mono.text-right = format_money pp.shipping_price
                 td.actions
                   = link_to unlink_purchase_items_path(id: pp.id), class: "no-events danger", data: { turbo_confirm: "Are you sure?", turbo_method: :post }
                     i.icn ✂︎
