--- a/app/views/sales/_sale_attributes.html.slim
+++ b/app/views/sales/_sale_attributes.html.slim
@@ -14,11 +14,11 @@
 
   .card
     .title Total, $
-    p.right.fit.mono = format_money sale.total
+    p.text-right.fit.font-mono = format_money sale.total
     .title Discount
-    p.right.fit.mono = format_money sale.discount_total
+    p.text-right.fit.font-mono = format_money sale.discount_total
     .title Shipping
-    p.right.fit.mono = format_money sale.shipping_total
+    p.text-right.fit.font-mono = format_money sale.shipping_total
 
   .card
     .title ID
