--- a/app/views/warehouses/index.html.slim
+++ b/app/views/warehouses/index.html.slim
@@ -11,6 +11,6 @@ section.section-border-base.section-wide
         th Container Tracking
         th Courier Tracking
         th Products
-        th.right Actions
+        th.text-right Actions
     tbody
       = render @warehouses, warehouses_count: @warehouses.size
