--- a/app/views/suppliers/show.html.slim
+++ b/app/views/suppliers/show.html.slim
@@ -22,7 +22,7 @@ main
             th Title
             th Edition
             th Purchased ago
-            th.right Item Price, $
+            th.text-right Item Price, $
             th Qty
             th Debt
           tbody
@@ -39,7 +39,7 @@ main
                   td = purchase.product.full_title
                   td  
                 td.no-wrap = time_ago_in_words (purchase.purchase_date.presence || purchase.created_at)
-                td.right.mono = format_money purchase.item_price
+                td.text-right.font-mono = format_money purchase.item_price
                 td = purchase.amount
                 td = purchase.debt > 0 ? format_money(purchase.debt) : ""
 
