--- a/app/views/warehouses/_purchase_item.html.slim
+++ b/app/views/warehouses/_purchase_item.html.slim
@@ -13,10 +13,10 @@ tr(
   td
     - if item.sale
       = link_to item.sale.title, item.sale, class: "no-events"
-  td.mono = format_item_size(item)
-  td.mono.right = item.weight
-  td.mono.right = format_money item.expenses
-  td.mono.right = format_money item.shipping_price
+  td.font-mono = format_item_size(item)
+  td.font-mono.text-right = item.weight
+  td.font-mono.text-right = format_money item.expenses
+  td.font-mono.text-right = format_money item.shipping_price
   td.actions
     = render "_shared/action-destroy", route: purchase_item_path(item)
     = render "_shared/action-edit", route: edit_purchase_item_path(item)
