--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -18,10 +18,10 @@
           th Title
           th Sale
           th Length × Width × Height, cm
-          th.right Kg
-          th.right Expenses
-          th.right Shipping
-          th.right Actions
+          th.text-right Kg
+          th.text-right Expenses
+          th.text-right Shipping
+          th.text-right Actions
         tbody
           - @purchase_items.each do |item|
             = render "purchase_item", item:
