--- a/app/views/warehouses/_warehouse.html.slim
+++ b/app/views/warehouses/_warehouse.html.slim
@@ -9,13 +9,13 @@ tr id="#{dom_id warehouse}" data-action="click->table#goTo" data-table-url-param
           | New purchases go to this warehouse by default. Change it on the edit page.
     br
     = warehouse.external_name
-  td.mono = warehouse.cbm
-  td.mono = warehouse.container_tracking_number
+  td.font-mono = warehouse.cbm
+  td.font-mono = warehouse.container_tracking_number
   - if warehouse.courier_tracking_url.present?
     td = link_to warehouse.courier_tracking_url, warehouse.courier_tracking_url, target: "_blank", rel: "noopener noreferrer", class: "link no-events"
   - else
     td
-  td.mono = warehouse.purchase_items.size  
+  td.font-mono = warehouse.purchase_items.size  
   - if action_name != "show" 
     td.actions
       = render "_shared/action-edit", route: edit_warehouse_path(warehouse)
