--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -29,10 +29,6 @@
     @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-200/50 transition-all duration-150;
   }
 
-  a.link {
-    @apply inline p-1 bg-transparent border-none;
-  }
-
   select:not([multiple], [size]) {
     @apply appearance-none w-fit pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-200 hover:bg-gray-100 rounded-sm;
 
@@ -77,6 +73,10 @@
 
   .btn-rounded {
     @apply rounded-full px-3 border-gray-200/60;
+  }
+
+  a.link {
+    @apply inline font-normal underline p-0 bg-transparent hover:bg-transparent border-none hover:text-blue-600;
   }
 }
 
